# robot_emulator_on_stm32f411

./: .gitignore  7sddriver.c  7sddriver.h  CMakeLists.txt  README.md  analog_input.c  analog_input.h  arm-none-eabi.cmake  crc.c  crc.h  event_for_uart.c  event_for_uart.h  hysteresis.h  init.c  init.h  key.c  key.h  main.c  test_analog_input.c  uart_driver.c  uart_driver.h
frame_codec/: CMakeLists.txt
frame_codec/include/: frame_codec.h
frame_codec/src/: cobs.c  cobs.h  frame_codec.c
